--- a/pmbok.html
+++ b/pmbok.html
@@ -25,7 +25,7 @@
                                     <table>
                                         <tr>
                                             <td><h2 class="team-name">Team name</h2></td>
-                                            <td><h2 class="team-name">: RB</h2></td>
+                                            <td><h2 class="team-name">: R.B</h2></td>
                                         </tr>
                                         <tr>
                                             <td><h2 class="team-member">Team members</h2></td>
@@ -150,9 +150,28 @@
                                         <td class="in-out active">Outputs</td>
                                     </tr>
                                 </table>
-                                <ul class="unslider-content-list">
-                                    <li>Requirements Documentation</li>
-                                    <li>Requirements Traceability Matrix</li>
+                                <ul class="unslider-content-list subtt">
+                                    <li>Requirements Documentation
+                                        <ul class="content-sub-list">
+                                            <li>Business requirements</li>
+                                            <li>Stakeholder requirements</li>
+                                            <li>Solution requirements</li>
+                                            <li>Project requirements</li>
+                                            <li>Transition requirements</li>
+                                            <li>Requirements assumptions, dependencies, and constraints</li>
+                                        </ul>
+                                    </li>
+                                    <li>Requirements Traceability Matrix
+                                    <ul class="content-sub-list">
+                                        <li>Business needs, opportunities, goals, and objectives</li>
+                                        <li>Project objectives</li>
+                                        <li>Project scope/WBS deliverables</li>
+                                        <li>Product design</li>
+                                        <li>Product development</li>
+                                        <li>Test strategy and test scenarios</li>
+                                        <li>High-level requirements to more detailed requirements</li>
+                                    </ul>
+                                    </li>
                                 </ul>
                             </li>
                             <li class="unslider-content">
@@ -625,6 +644,8 @@
                 </div>
             </div>
         </div>
+
+        <h1 class="topic-team-name">R.B TEAM</h1>
     </div>
 </body>
 </html>
