feat(ImplementContent): implemented content for section 5.4, 5.5, 5.6

--- a/pmbok.html
+++ b/pmbok.html
@@ -258,13 +258,13 @@
                     </div>
                 </div>
                 <div class="popup-content" id="pc_4">
-                    <div class="pupup-content-head">5.3 Plan Scope Management</div>
+                    <div class="pupup-content-head">5.4  create WBS</div>
                     <div class="my-slider">
                         <ul>
                             <li class="unslider-content">
-                                <img src="img/img5.1.1.png"/>
+                                <img src="img/img5.4.1.png"/>
                             </li>
-                            <li class="unslider-content">
+                            <li class="unslider-content scroll">
                                 <table class="io">
                                     <tr>
                                         <td class="in-out active">Inputs</td>
@@ -273,13 +273,14 @@
                                     </tr>
                                 </table>
                                 <ul class="unslider-content-list">
-                                    <li>Project Management Plan</li>
-                                    <li>Project Charter</li>
+                                    <li>Scope Management Plan</li>
+                                    <li>Project Scope Statement</li>
+                                    <li>Requirements documentation</li>
                                     <li>Enterprise Environmental Factors</li>
-                                    <li>Organizational Process Assets</li>
+                                    <li>organizational Process Assets</li>
                                 </ul>
                             </li>
-                            <li class="unslider-content">
+                            <li class="unslider-content scroll">
                                 <table class="io">
                                     <tr>
                                         <td class="in-out">Inputs</td>
@@ -288,11 +289,27 @@
                                     </tr>
                                 </table>
                                 <ul class="unslider-content-list">
-                                    <li>Expert Judgment</li>
-                                    <li>Meetings</li>
+                                    <li>Decomposition</li>
+                                    <li>Expert Judgment
+                                         <ul class="content-sub-list">
+                                            <li class="unslider-content scroll">
+                                            Sample WBS decomposed down through Work Packages
+                                            <img src="img/img5.4.2.png"/>
+                                            </li>
+                                            <li class="unslider-content scroll">
+                                            Sample WBS organized by Phase
+                                            <img src="img/img5.4.3.png"/>
+                                            </li>
+                                            <li class="unslider-content scroll">
+                                            Sample WBS with Major deliverables
+                                            <img src="img/img5.4.4.png"/>
+                                            </li>
+                                        </ul>
+                                    </li>
+
                                 </ul>
                             </li>
-                            <li class="unslider-content">
+                            <li class="unslider-content scroll">
                                 <table class="io">
                                     <tr>
                                         <td class="in-out">Inputs</td>
@@ -301,21 +318,31 @@
                                     </tr>
                                 </table>
                                 <ul class="unslider-content-list">
-                                    <li>Scope Management Plan</li>
-                                    <li>Requirements Management Plan</li>
+                                    <li>Scope Baseline
+                                        <ul class="content-sub-list">
+                                            <li>Project scope statement. The project scope statement includes the description of the project scope, major deliverables, assumptions, and constraints.</li>
+                                            <li>WBS.The WBS is a hierarchical decomposition of the total scope of work to becarried out by the project team to accomplish the project objectives and create the required deliverables.</li>
+                                            <li>WBS dictionary. The WBS dictionary is a document that provides detailed deliverable, activity, and scheduling information about each component in the WBS.
+                                                <ul class="content-sub-list">
+                                                    <li>Code of account identifier, Description of work, Assumptions and constraints, Responsible organization, Schedule milestones, Associated schedule activities, Resources required, Cost estimates, Quality requirements, Acceptance criteria, Technical references and Agreement information</li>
+                                                </ul>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li>Project documents updates</li>
                                 </ul>
                             </li>
                         </ul>
                     </div>
                 </div>
                 <div class="popup-content" id="pc_5">
-                    <div class="pupup-content-head">5.3 Plan Scope Management</div>
+                    <div class="pupup-content-head">5.5 Validate Scope</div>
                     <div class="my-slider">
                         <ul>
                             <li class="unslider-content">
-                                <img src="img/img5.1.1.png"/>
+                                <img src="img/img5.5.1.png"/>
                             </li>
-                            <li class="unslider-content">
+                            <li class="unslider-content scroll">
                                 <table class="io">
                                     <tr>
                                         <td class="in-out active">Inputs</td>
@@ -325,12 +352,13 @@
                                 </table>
                                 <ul class="unslider-content-list">
                                     <li>Project Management Plan</li>
-                                    <li>Project Charter</li>
-                                    <li>Enterprise Environmental Factors</li>
-                                    <li>Organizational Process Assets</li>
+                                    <li>Requirements documentation</li>
+                                    <li>Requirements traceability Matrix</li>
+                                    <li>Verified deliverables</li>
+                                    <li>Work Performance data</li>
                                 </ul>
                             </li>
-                            <li class="unslider-content">
+                            <li class="unslider-content scroll">
                                 <table class="io">
                                     <tr>
                                         <td class="in-out">Inputs</td>
@@ -339,11 +367,11 @@
                                     </tr>
                                 </table>
                                 <ul class="unslider-content-list">
-                                    <li>Expert Judgment</li>
-                                    <li>Meetings</li>
+                                    <li>Inspection</li>
+                                    <li>Group decision-Making techniques</li>
                                 </ul>
                             </li>
-                            <li class="unslider-content">
+                            <li class="unslider-content scroll">
                                 <table class="io">
                                     <tr>
                                         <td class="in-out">Inputs</td>
@@ -352,8 +380,10 @@
                                     </tr>
                                 </table>
                                 <ul class="unslider-content-list">
-                                    <li>Scope Management Plan</li>
-                                    <li>Requirements Management Plan</li>
+                                    <li>Accepted deliverables</li>
+                                    <li>Change requests</li>
+                                    <li>Work Performance Information</li>
+                                    <li>Project documents updates</li>
                                 </ul>
                             </li>
                         </ul>
@@ -455,29 +485,30 @@
                             </div>
                         </div>
                         <div class="block">
-                            <div class="block-head head"><span id="show_pc_4">5.4 Plan Scope Management</span>
+                            <div class="block-head head"><span id="show_pc_4">5.4 Create WBS</span>
                                 <span class="toggle">v</span>
                             </div>
                             <div class="block-content">
                                 <ul class="content-toggle content-full">
                                     <li>Inputs
                                         <ul>
-                                            <li>Project management plan</li>
-                                            <li>Project chater</li>
+                                            <li>Scope management plan</li>
+                                            <li>Project scope statement</li>
+                                            <li>Requirements documentation</li>
                                             <li>Enterprise environmental factors</li>
                                             <li>Organizational process assets</li>
                                         </ul>
                                     </li>
                                     <li>Tools & Techniques
                                         <ul>
+                                            <li>Decomposition</li>
                                             <li>Expert judgment</li>
-                                            <li>Meetings</li>
                                         </ul>
                                     </li>
                                     <li>Outputs
                                         <ul>
-                                            <li>Scope management plan</li>
-                                            <li>Requirements management plan</li>
+                                            <li>Scope baseline</li>
+                                            <li>Project documents updates</li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -535,7 +566,7 @@
                             </div>
                         </div>
                         <div class="block">
-                            <div class="block-head head"><span id="show_pc_5">5.5 Plan Scope Management</span>
+                            <div class="block-head head"><span id="show_pc_5">5.5 Validate Scope</span>
                                 <span class="toggle">v</span>
                             </div>
                             <div class="block-content">
@@ -543,21 +574,24 @@
                                     <li>Inputs
                                         <ul>
                                             <li>Project management plan</li>
-                                            <li>Project chater</li>
-                                            <li>Enterprise environmental factors</li>
-                                            <li>Organizational process assets</li>
+                                            <li>Requirements documentation</li>
+                                            <li>Requirements traceability matrix</li>
+                                            <li>Verified deliverables</li>
+                                            <li>Work performance data</li>
                                         </ul>
                                     </li>
                                     <li>Tools & Techniques
                                         <ul>
-                                            <li>Expert judgment</li>
-                                            <li>Meetings</li>
+                                            <li>Inspection</li>
+                                            <li>Group decision-making techniques</li>
                                         </ul>
                                     </li>
                                     <li>Outputs
                                         <ul>
-                                            <li>Scope management plan</li>
-                                            <li>Requirements management plan</li>
+                                            <li>Accepted deliverables</li>
+                                            <li>Change requests</li>
+                                            <li>Work performance information</li>
+                                            <li>Project documents updates</li>
                                         </ul>
                                     </li>
                                 </ul>
@@ -607,7 +641,7 @@
                             </div>
                         </div>
                         <div class="block">
-                            <div class="block-head head"><span id="show_pc_6">5.6 Plan Scope Management</span>
+                            <div class="block-head head"><span id="show_pc_6">5.6 Control Scope</span>
                                 <span class="toggle">v</span>
                             </div>
                             <div class="block-content">
@@ -615,21 +649,24 @@
                                     <li>Inputs
                                         <ul>
                                             <li>Project management plan</li>
-                                            <li>Project chater</li>
-                                            <li>Enterprise environmental factors</li>
+                                            <li>Requirements documentation</li>
+                                            <li>Requirements traceability matrix</li>
+                                            <li>Work performance data</li>
                                             <li>Organizational process assets</li>
                                         </ul>
                                     </li>
                                     <li>Tools & Techniques
                                         <ul>
-                                            <li>Expert judgment</li>
-                                            <li>Meetings</li>
+                                            <li>Variance analysis</li>
                                         </ul>
                                     </li>
                                     <li>Outputs
                                         <ul>
-                                            <li>Scope management plan</li>
-                                            <li>Requirements management plan</li>
+                                            <li>Work performance information</li>
+                                            <li>Change requests</li>
+                                            <li>Project management plan updates</li>
+                                            <li>Project documents updates</li>
+                                            <li>Organizational process assets updates</li>
                                         </ul>
                                     </li>
                                 </ul>
